--- a/node_financial/views/customer/edit.ejs
+++ b/node_financial/views/customer/edit.ejs
@@ -33,6 +33,14 @@
 		  <input value="<%= customer.state %>"type="text" name="state" ><br />
 		</td>
 	</tr>
+	<tr>
+	  <td align='right'>
+	  		Customer Email
+	  	</td>
+	  	<td align='left'>
+		  <input value="<%= customer.email %>"type="text" name="email" ><br />
+		</td>
+	</tr>
   </table>
   <input type="submit" value="Edit customer" />
 </form>
