--- a/node_financial/views/customer/show.ejs
+++ b/node_financial/views/customer/show.ejs
@@ -6,3 +6,5 @@
   <input type="hidden" value="<%= customer.id %>" name="owner" />
   <input type="submit" value="Add Stock" />
 </form>
+<br/>
+<a href="/customer">Show Customers</a>
