--- a/node_financial/views/stock/show.ejs
+++ b/node_financial/views/stock/show.ejs
@@ -1,8 +1,10 @@
-<h1><%= stock.symbol %></h1>
+<h1><%= stock.owner.name %></h1>
 <hr>
+<h3><%=stock.symbol%></h3>
 <h3>Name: <%= stock.name %></h3><br/>
-<h4>Number Of Shares: <%= stock.number_of_shares %></h4><br/>
-<h3>Purchase Price: <%= stock.purchase_price</h3><br/>
-<h3>Created: <%= stock.createdAt</h3><br/>
-<h3>Modified: <%= stock.updatedAt</h3><br/>
-<h3>Purchase Date: <%= stock.date_purchased</h3><br/>
+<h3>Number Of Shares: <%= stock.number_of_shares %></h3><br/>
+<h3>Purchase Price: <%= stock.purchase_price%></h3><br/>
+<h3>Created: <%= stock.createdAt%></h3><br/>
+<h3>Modified: <%= stock.updatedAt%></h3><br/>
+<h3>Purchase Date: <%= stock.date_purchased%></h3><br/>
+<a href="/customer/show/<%=stock.owner.id%>">Show Customers</a>
