--- a/node_financial/views/customer/new.ejs
+++ b/node_financial/views/customer/new.ejs
@@ -1,3 +1,7 @@
+<ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/customer">Customer</a></li>
+</ul>
 <form action="/customer/create" method="POST" >
   <h2>Create a Customer</h2>
 
