--- a/node_financial/views/customer/show.ejs
+++ b/node_financial/views/customer/show.ejs
@@ -1,8 +1,13 @@
+<ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/customer">Customer</a></li>
+</ul>
 <h1><%= customer.name %></h1>
 <hr>
 <h3>Email: <%= customer.email %></h3>
 <h4><%= customer.state %></h4>
 <hr>
+<!--This is the Stock information-->
 <h3>Stocks</h3>
 <table>
   <tr>
@@ -24,12 +29,12 @@
   </tr>
   <% }); %>
 </table>
-
+<br/>
 <form action="/stock/new" method="POST" >
   <input type="hidden" value="<%= customer.id %>" name="owner">
   <input type="submit" value="Add Stock" />
 </form>
-
+<!--This is the investment information-->
 <hr>
 <h3>Investment</h3>
 <table>
@@ -52,10 +57,8 @@
   </tr>
   <% }); %>
 </table>
-
+<br/>
 <form action="/investment/new" method="POST" >
   <input type="hidden" value="<%= customer.id %>" name="investor">
   <input type="submit" value="Add Investment" />
 </form>
-<br/>
-<a href="/customer">Show Customers</a>
