--- a/node_financial/views/investment/edit.ejs
+++ b/node_financial/views/investment/edit.ejs
@@ -1,3 +1,7 @@
+<ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/customer">Customer</a></li>
+</ul>
 <form action="/investment/update/<%= investment.id %>" method="POST" >
   <h2>Edit a Investment for Customer</h2>
   <table>
@@ -9,7 +13,7 @@
 			Name
 		</td>
 		<td align='left'>
-			<input value="<%= investment.name %>" type="text" name="name" ><br />	
+			<input value="<%= investment.category %>" type="text" name="category" ><br />	
 		</td>
 	</tr>
 	<tr>
@@ -29,5 +33,5 @@
 		</td>
 	</tr>
   </table>
-  <input type="submit" value="Edit Stock" />
+  <input type="submit" value="Edit Investment" />
 </form>
