--- a/node_financial/views/investment/show.ejs
+++ b/node_financial/views/investment/show.ejs
@@ -1,4 +1,9 @@
-<h1><%= investment.owner.name %></h1>
+<ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/customer/show/<%=investment.investor.id%>"><%=investment.investor.name%></a></li>
+  <li><a href="/customer">Customer</a></li>
+</ul>
+<h1><%= investment.investor.name %></h1>
 <hr>
 <h3><%=investment.symbol%></h3>
 <h3>Name: <%= investment.category %></h3><br/>
@@ -8,4 +13,3 @@
 <h3>Created: <%= investment.createdAt%></h3><br/>
 <h3>Modified: <%= investment.updatedAt%></h3><br/>
 <h3>Recent Date: <%= investment.recent_date%></h3><br/>
-<a href="/customer/show/<%=investment.owner.id%>">Show Customers</a>
