--- a/node_financial/views/stock/edit.ejs
+++ b/node_financial/views/stock/edit.ejs
@@ -1,3 +1,7 @@
+<ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/customer">Customer</a></li>
+</ul>
 <form action="/stock/update/<%= stock.id %>" method="POST" >
   <h2>Edit a Stock for Customer</h2>
   <table>
