--- a/node_financial/views/stock/new.ejs
+++ b/node_financial/views/stock/new.ejs
@@ -1,3 +1,7 @@
+<ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/customer">Customer</a></li>
+</ul>
 <form action="/stock/create" method="POST" >
   <h2>Create a new Stock for <%= customer.name %></h2>
 
