--- a/node_financial/views/stock/show.ejs
+++ b/node_financial/views/stock/show.ejs
@@ -1,3 +1,8 @@
+<ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/customer/show/<%=stock.owner.id%>"><%=stock.owner.name%></a></li>
+  <li><a href="/customer">Customer</a></li>
+</ul>
 <h1><%= stock.owner.name %></h1>
 <hr>
 <h3><%=stock.symbol%></h3>
@@ -7,4 +12,3 @@
 <h3>Created: <%= stock.createdAt%></h3><br/>
 <h3>Modified: <%= stock.updatedAt%></h3><br/>
 <h3>Purchase Date: <%= stock.date_purchased%></h3><br/>
-<a href="/customer/show/<%=stock.owner.id%>">Show Customers</a>
