Configure production environment

--- a/node_financial/views/customer/show.ejs
+++ b/node_financial/views/customer/show.ejs
@@ -8,6 +8,7 @@
 <h4><%= customer.state %></h4>
 <hr>
 <!--This is the Stock information-->
+<div>
 <h3>Stocks</h3>
 <table>
   <tr>
@@ -36,6 +37,7 @@
 </form>
 <!--This is the investment information-->
 <hr>
+<div>
 <h3>Investment</h3>
 <table>
   <tr>
