--- a/node_financial/assets/styles/style.css
+++ b/node_financial/assets/styles/style.css
@@ -29,6 +29,8 @@ li a:hover {
     background-color: #4CAF50;
 }
 
+tr:nth-child(even) {background-color: #f2f2f2}
+
 <script src="jquery-1.11.2.min.js"></script>
 <script src="stupidtable.min.js"></script>
 <script>
