Added Styling and other code.
- Final changes to the code.
- Final Styling to the code.

--- a/node_financial/views/customer/index.ejs
+++ b/node_financial/views/customer/index.ejs
@@ -1,14 +1,13 @@
-<ul>
-  <li><a href="/">Home</a></li>
-</ul>
-<h3>Customers</h3>
+<nav>
+  <a href="/">Home</a>
+</nav>
+<h1>Customers</h1>
 <table>
   <tr>
     <th>ID</th>
     <th>Name</th>
     <th>Email</th>
-    <th></th>
-    <th></th>
+    <th>Cell Phone</th>
     <th></th>
   </tr>
   <% _.each(customers, function(customer) { %>
@@ -16,10 +15,9 @@
     <td><%= customer.id %></td>
     <td><%= customer.name %></td>
     <td><%= customer.email %></td>
+    <td><%= customer.cell_phone%></td>
     <td><a href="/customer/show/<%= customer.id %>">Show</a></td>
-    <td><a href="/customer/edit/<%= customer.id %>">Edit</a></td>
-    <td><a href="/customer/destroy/<%= customer.id %>">Delete</a></td>
   </tr>
   <% }) %>
-</table>
+</table><br/>
   <a href="/customer/new">Create New</a>
