--- a/node_financial/views/stock/new.ejs
+++ b/node_financial/views/stock/new.ejs
@@ -1,13 +1,16 @@
-<ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/customer">Customer</a></li>
-</ul>
+<nav>
+  <a href="/">Home</a>
+  <a href="/customer">Customer</a>
+</nav>
 <form action="/stock/create" method="POST" >
   <h2>Create a new Stock for <%= customer.name %></h2>
 
   <input type="hidden" name="owner" value="<%= customer.id %>" />
 
   <input type="text" placeholder="Symbol" name="symbol" ><br />
+  <input type="text" placeholder="Name" name="name" ><br />
   <input type="text" placeholder="Number of Shares" name="number_of_shares" ><br />
+  <input type="text" placeholder="Purchase Price" name="purchase_price" ><br />
+  <input type="text" placeholder="Date purchased" name="date_purchased" ><br />
   <input type="submit" value="Add Stock" />
 </form>
