--- a/node_financial/assets/styles/style.css
+++ b/node_financial/assets/styles/style.css
@@ -2,32 +2,37 @@
 table,th,td {border : solid 1px green; border-collapse: collapse;}
 td,th{padding: 3px 7px 2px 7px;}
 th{background-color: green; color:white; cursor: pointer; }
-ul {
-    list-style-type: none;
+nav {
     margin: 0;
-    padding: 0;
+    padding: 10px 16px;
     overflow: hidden;
-    border: 1px solid #e7e7e7;
-    background-color: #f3f3f3;
+    border: 1px solid #CC99CC;
+    background-color: #CCCC99;
 }
 
-li {
-    float: left;
+body {
+    background-image: url("back.jpg")
 }
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    color: #666;
-}
+h1 {color:;}
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
-    background-color: #4CAF50;
+a:link, a:visited {
+    background-color: #989898;
+    color: black;
+    padding: 7px 20px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bold;
 }
+
+a:hover, a:active {
+    font-weight: bold;
+    background-color: green;
+}
+
+.zn { margin-left: 8em; margin-right: 8em }
 
 tr:nth-child(even) {background-color: #f2f2f2}
 
