--- a/node_financial/views/customer/edit.ejs
+++ b/node_financial/views/customer/edit.ejs
@@ -1,7 +1,7 @@
-<ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/customer">Customer</a></li>
-</ul>
+<nav>
+  <a href="/">Home</a>
+  <a href="/customer">Customer</a>
+</nav>
 <form action="/customer/update/<%= customer.id %>" method="POST" >
   <h2>Create a Customer</h2>
   <table>
