--- a/node_financial/views/customer/new.ejs
+++ b/node_financial/views/customer/new.ejs
@@ -1,13 +1,17 @@
-<ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/customer">Customer</a></li>
-</ul>
+<nav>
+  <a href="/">Home</a>
+  <a href="/customer">Customer</a>
+</nav>
 <form action="/customer/create" method="POST" >
   <h2>Create a Customer</h2>
 
   <input type="text" placeholder="Name" name="name" ><br />
+  <input type="text" placeholder="Email" name="email" ><br />
   <input type="text" placeholder="Street Address" name="street_address" ><br />
   <input type="text" placeholder="City" name="city" >
   <input type="text" placeholder="State" name="state" >
+  <input type="text" placeholder="Zip Code" name="zip" ><br />
+  <input type="text" placeholder="Home Phone" name="home_phone" ><br />
+  <input type="text" placeholder="Cell Phone" name="cell_phone" ><br />
   <input type="submit" value="Create Customer" />
 </form>
