--- a/node_financial/views/customer/show.ejs
+++ b/node_financial/views/customer/show.ejs
@@ -1,14 +1,20 @@
-<ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/customer">Customer</a></li>
-</ul>
+<nav>
+    <a href="/">Home</a>
+    <a href="/customer">Customer</a>
+</nav>
 <h1><%= customer.name %></h1>
 <hr>
 <h3>Email: <%= customer.email %></h3>
-<h4><%= customer.state %></h4>
+<h3>Address: <%= customer.street_address %>
+,<%= customer.city%>
+,<%= customer.state %>
+,<%= customer.zip %></h3>
+<h3>Home Phone: <%= customer.home_phone %></h3>
+<h3>Cell Phone: <%= customer.cell_phone %></h3><br/>
+<td><a href="/customer/edit/<%= customer.id %>">Edit</a></td>
+<td><a href="/customer/destroy/<%= customer.id %>">Delete</a></td>
 <hr>
 <!--This is the Stock information-->
-<div>
 <h3>Stocks</h3>
 <table>
   <tr>
@@ -16,17 +22,13 @@
     <th>Number of Shares</th>
     <th>Current Price</th>
     <th></th>
-    <th></th>
-    <th></th>
   </tr>
   <% _.each(customer.stocks, function(stock) { %>
   <tr data-id="<%= stock.id %>" data-model="stock" >
     <td><%= stock.symbol %></td>
     <td><%= stock.number_of_shares %></td>
-    <td></td>
+    <td><%= stock.purchase_price%></td>
     <td><a href="/stock/show/<%= stock.id %>">Show</a></td>
-    <td><a href="/stock/edit/<%= stock.id %>">Edit</a></td>
-    <td><a href="/stock/destroy/<%= stock.id %>">Delete</a></td>
   </tr>
   <% }); %>
 </table>
@@ -37,15 +39,12 @@
 </form>
 <!--This is the investment information-->
 <hr>
-<div>
 <h3>Investment</h3>
 <table>
   <tr>
     <th>Category</th>
     <th>Acquired Date</th>
     <th>Acquired Date</th>
-    <th></th>
-    <th></th>
     <th></th>
   </tr>
   <% _.each(customer.investments, function(investment) { %>
@@ -54,8 +53,6 @@
     <td><%= investment.acquired_value %></td>
     <td><%=investment.acquired_date%></td>
     <td><a href="/investment/show/<%= investment.id %>">Show</a></td>
-    <td><a href="/investment/edit/<%= investment.id %>">Edit</a></td>
-    <td><a href="/investment/destroy/<%= investment.id %>">Delete</a></td>
   </tr>
   <% }); %>
 </table>
