--- a/node_financial/views/static/home.ejs
+++ b/node_financial/views/static/home.ejs
@@ -1,2 +1,2 @@
-<h1>Welcome to Node Financial</h1>
-<a href="/customer">Show Customers</a>
+<h1 align="center">Welcome to Node Financial</h1><br/>
+<p align="center"><a href="/customer">Show Customers</a></p>
