--- a/node_financial/views/stock/edit.ejs
+++ b/node_financial/views/stock/edit.ejs
@@ -1,7 +1,7 @@
-<ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/customer">Customer</a></li>
-</ul>
+<nav>
+  <a href="/">Home</a>
+  <a href="/customer">Customer</a>
+</nav>
 <form action="/stock/update/<%= stock.id %>" method="POST" >
   <h2>Edit a Stock for Customer</h2>
   <table>
@@ -24,6 +24,31 @@
 		  <input value="<%= stock.number_of_shares %>"type="text" name="number_of_shares" ><br />
 		</td>
 	</tr>
+	<tr>
+	  <td align='right'>
+	  		Name
+	  	</td>
+	  	<td align='left'>
+		  <input value="<%= stock.name %>"type="text" name="name" ><br />
+		</td>
+	</tr>
+	<tr>
+	  <td align='right'>
+	  		Purchase Price
+	  	</td>
+	  	<td align='left'>
+		  <input value="<%= stock.purchase_price %>"type="text" name="purchase_price" ><br />
+		</td>
+	</tr>
+	<tr>
+	  <td align='right'>
+	  		Date Purchased
+	  	</td>
+	  	<td align='left'>
+		  <input value="<%= stock.date_purchased %>"type="text" name="date_purchased" ><br />
+		</td>
+	</tr>
   </table>
+  <br/>
   <input type="submit" value="Edit Stock" />
 </form>
