--- a/node_financial/views/stock/show.ejs
+++ b/node_financial/views/stock/show.ejs
@@ -1,14 +1,16 @@
-<ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/customer/show/<%=stock.owner.id%>"><%=stock.owner.name%></a></li>
-  <li><a href="/customer">Customer</a></li>
-</ul>
+<nav>
+  <a href="/">Home</a>
+  <a href="/customer/show/<%=stock.owner.id%>"><%=stock.owner.name%></a>
+  <a href="/customer">Customer</a>
+</nav>
 <h1><%= stock.owner.name %></h1>
 <hr>
-<h3><%=stock.symbol%></h3>
+<h3>Symbol: <%=stock.symbol%></h3>
 <h3>Name: <%= stock.name %></h3><br/>
 <h3>Number Of Shares: <%= stock.number_of_shares %></h3><br/>
 <h3>Purchase Price: <%= stock.purchase_price%></h3><br/>
 <h3>Created: <%= stock.createdAt%></h3><br/>
 <h3>Modified: <%= stock.updatedAt%></h3><br/>
-<h3>Purchase Date: <%= stock.date_purchased%></h3><br/>
+<hr>
+<td><a href="/stock/edit/<%= stock.id %>">Edit</a></td>
+<td><a href="/stock/destroy/<%= stock.id %>">Delete</a></td>
