add latest stock price

--- a/views/stock/show.ejs
+++ b/views/stock/show.ejs
@@ -9,6 +9,7 @@
 <h3>Name: <%= stock.name %></h3><br/>
 <h3>Number Of Shares: <%= stock.number_of_shares %></h3><br/>
 <h3>Purchase Price: <%= stock.purchase_price%></h3><br/>
+<h3>Latest Price: <%= stock.current_price %></h3><br/>
 <h3>Created: <%= stock.createdAt%></h3><br/>
 <h3>Modified: <%= stock.updatedAt%></h3><br/>
 <hr>
