--- a/views/customer/show.ejs
+++ b/views/customer/show.ejs
@@ -18,7 +18,7 @@
 <h3>Stocks</h3>
 <table>
   <tr>
-    <th>Symbol</th>
+    <th>Name</th>
     <th>Number of Shares</th>
     <th>Current Price</th>
     <th>Latest Price</th>
@@ -26,7 +26,7 @@
   </tr>
   <% _.each(customer.stocks, function(stock) { %>
   <tr data-id="<%= stock.id %>" data-model="stock" >
-    <td><%= stock.symbol %></td>
+    <td><%= stock.name %></td>
     <td><%= stock.number_of_shares %></td>
     <td><%= stock.purchase_price%></td>
     <td><%= stock.current_price%></td>
