--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,7 +11,7 @@ nav {
 }
 
 body {
-    background-image: url("back.jpg")
+    background-image: url("http://i.stack.imgur.com/jGlzr.png")
 }
 
 h1 {color:;}
