--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,7 +11,7 @@ nav {
 }
 
 body {
-    background-image: url("http://i.stack.imgur.com/jGlzr.png")
+    background-image: url("https://secure.static.tumblr.com/cb62eea126cbef7249a78c2d9db8d7aa/yhyckzm/51fmyzmy4/tumblr_static_circles-green.jpg")
 }
 
 h1 {color:;}
