--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,11 +7,11 @@ nav {
     padding: 10px 16px;
     overflow: hidden;
     border: 1px solid #CC99CC;
-    background-color: #CCCC99;
+    background-color: #CC6600;
 }
 
 body {
-    background-image: url("https://secure.static.tumblr.com/cb62eea126cbef7249a78c2d9db8d7aa/yhyckzm/51fmyzmy4/tumblr_static_circles-green.jpg")
+    background-image: url("http://static.tumblr.com/ge74hdk/G3flw5yrs/wood_pattern.png")
 }
 
 h1 {color:;}
