--- a/.tmp/public/styles/style.css
+++ b/.tmp/public/styles/style.css
@@ -6,8 +6,8 @@ nav {
     margin: 0;
     padding: 10px 16px;
     overflow: hidden;
-    border: 1px solid #CC99CC;
-    background-color: #CC6600;
+    border: 1px solid #FFFFFF;
+    background-color: transparent;
 }
 
 body {
