--- a/views/customer/edit.ejs
+++ b/views/customer/edit.ejs
@@ -1,13 +1,21 @@
-<nav>
-  <a href="/">Home</a>
-  <a href="/customer">Customer</a>
+<div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class=" nav navbar-nav">
+      <li class="active"><a href="/">Node Financial</a></li>
+      <li><a href="/customer">Customer Home</a></li>
+      <li><a href="/customer/show/<%=customer.id%>">Nikhit Adusumilli</a></li>
+    </ul>
+  </div>
 </nav>
-<form action="/customer/update/<%= customer.id %>" method="POST" >
+</div>
+<div>
+<form class="form-signin" action="/customer/update/<%= customer.id %>" method="POST" >
   <h2>Create a Customer</h2>
   <table>
   	<tr>
 	  	<td align='right'>
-	  		Customer Name
+	  		<strong>Customer Name</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= customer.name %>"type="text" name="name" ><br />
@@ -15,7 +23,7 @@
 	</tr>
 	<tr>
 		<td align='right'>
-			Customer Street Adress
+			<strong>Customer Street Adress</strong>
 		</td>
 		<td align='left'>
 			<input value="<%= customer.street_address %>" type="text" name="street_address" ><br />	
@@ -23,7 +31,7 @@
 	</tr>
 	<tr>
 	  <td align='right'>
-	  		Customer City
+	  		<strong>Customer City</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= customer.city %>"type="text" name="city" ><br />
@@ -31,7 +39,7 @@
 	</tr>
 	<tr>
 	  <td align='right'>
-	  		Customer State
+	  		<strong>Customer State</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= customer.state %>"type="text" name="state" ><br />
@@ -39,12 +47,14 @@
 	</tr>
 	<tr>
 	  <td align='right'>
-	  		Customer Email
+	  		<strong>Customer Email</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= customer.email %>"type="text" name="email" ><br />
 		</td>
 	</tr>
   </table>
-  <input type="submit" value="Edit customer" />
+  <br/>		
+  <input class="btn btn-primary btn-lg" type="submit" value="Update" />
 </form>
+</div>
