--- a/views/customer/index.ejs
+++ b/views/customer/index.ejs
@@ -1,8 +1,14 @@
-<nav>
-  <a href="/">Home</a>
+<div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class=" nav navbar-nav">
+      <li class="active"><a href="/">Node Financial</a></li>
+    </ul>
+  </div>
 </nav>
+</div>
 <h1>Customers</h1>
-<table>
+<table class="show">
   <tr>
     <th>ID</th>
     <th>Name</th>
@@ -16,8 +22,8 @@
     <td><%= customer.name %></td>
     <td><%= customer.email %></td>
     <td><%= customer.cell_phone%></td>
-    <td><a href="/customer/show/<%= customer.id %>">Show</a></td>
+    <td><a class="btn btn-info btn-lg" href="/customer/show/<%= customer.id %>">Show</a></td>
   </tr>
   <% }) %>
 </table><br/>
-  <a href="/customer/new">Create New</a>
+  <a class="btn btn-primary btn-lg" href="/customer/new">Create New</a>
