--- a/views/customer/new.ejs
+++ b/views/customer/new.ejs
@@ -1,7 +1,13 @@
-<nav>
-  <a href="/">Home</a>
-  <a href="/customer">Customer</a>
+<div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class=" nav navbar-nav">
+      <li class="active"><a href="/">Node Financial</a></li>
+      <li><a href="/customer">Customer Home</a></li>
+    </ul>
+  </div>
 </nav>
+</div>
 <form action="/customer/create" method="POST" >
   <h2>Create a Customer</h2>
 
