--- a/views/investment/edit.ejs
+++ b/views/investment/edit.ejs
@@ -1,7 +1,14 @@
-<nav>
-  <a href="/">Home</a>
-  <a href="/customer">Customer</a>
+<div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class=" nav navbar-nav">
+      <li class="active"><a href="/">Node Financial</a></li>
+      <li><a href="/customer">Customer Home</a></li>
+      <li><a href="/investment/show/<%=investment.id%>"><%=investment.category%></a></li>
+    </ul>
+  </div>
 </nav>
+</div>
 <form action="/investment/update/<%= investment.id %>" method="POST" >
   <h2>Edit a Investment for Customer</h2>
   <table>
@@ -10,7 +17,7 @@
 	</tr>
 	<tr>
 		<td align='right'>
-			Category
+			<strong>Category</strong>
 		</td>
 		<td align='left'>
 			<input value="<%= investment.category %>" type="text" name="category" ><br />	
@@ -18,7 +25,7 @@
 	</tr>
 	<tr>
 		<td align='right'>
-			Description
+			<strong>Description</strong>
 		</td>
 		<td align='left'>
 			<input value="<%= investment.description %>" type="text" name="description" ><br />	
@@ -26,7 +33,7 @@
 	</tr>
 	<tr>
 	  <td align='right'>
-	  		Acquired Price
+	  		<strong>Acquired Price</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= investment.acquired_value %>"type="text" name="acquired_value" ><br />
@@ -34,7 +41,7 @@
 	</tr>
 	<tr>
 	  <td align='right'>
-	  		Acquired Date
+	  		<strong>Acquired Date</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= investment.acquired_date %>"type="text" name="acquired_date" ><br />
@@ -42,7 +49,7 @@
 	</tr>
 	<tr>
 		<td align='right'>
-			Recent Date
+			<strong>Recent Date</strong>
 		</td>
 		<td align='left'>
 			<input value="<%= investment.recent_date %>" type="text" name="recent_date" ><br />	
@@ -50,5 +57,5 @@
 	</tr>
   </table>
   <br/>
-  <input type="submit" value="Edit Investment" />
+  <input class="btn btn-primary btn-lg" type="submit" value="Update" />
 </form>
