--- a/views/investment/new.ejs
+++ b/views/investment/new.ejs
@@ -1,7 +1,14 @@
-<nav>
-  <a href="/">Home</a>
-  <a href="/customer">Customer</a>
+<div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class=" nav navbar-nav">
+      <li class="active"><a href="/">Node Financial</a></li>
+      <li><a href="/customer">Customer Home</a></li>
+      <li><a href="/customer/show/<%=customer.id%>"><%=customer.name%></a></li>
+    </ul>
+  </div>
 </nav>
+</div>
 <form action="/investment/create" method="POST" >
   <h2>Create a new Investment for <%= customer.name %></h2>
 
@@ -12,5 +19,5 @@
   <input type="text" placeholder="Acquired Value" name="acquired_value"><br />
   <input type="text" placeholder="Acquired date" name="acquired_date"><br />
   <input type="text" placeholder="Recent date" name="recent_date"><br />
-  <input type="submit" value="Add Investment" />
+  <input class="btn btn-primary btn-lg" type="submit" value="Add Investment" />
 </form>
