--- a/views/static/home.ejs
+++ b/views/static/home.ejs
@@ -1,6 +1,17 @@
-<nav class="navbar">
-    <a href="/">Home</a>
+<div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class=" nav navbar-nav">
+      <li class="active"><a href="/">Node Financial</a></li>
+    </ul>
+  </div>
 </nav>
-<h1 align="center">Welcome to Node Financial</h1><br/>
-<p>
-<p align="center"><a href="/customer">Show Customers</a></p>
+</div>
+<div>
+	<h1 align="center">Welcome to Node Financial</h1><br/>
+	<br/>
+	<p align="center">
+		<a class="btn btn-info btn-lg" href="/customer">Show Customers</a>
+		<a class="btn btn-primary btn-lg" href="/customer/new">New Customer</a>
+	</p>
+</div>
