--- a/views/stock/edit.ejs
+++ b/views/stock/edit.ejs
@@ -1,7 +1,14 @@
-<nav>
-  <a href="/">Home</a>
-  <a href="/customer">Customer</a>
+<div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class=" nav navbar-nav">
+      <li class="active"><a href="/">Node Financial</a></li>
+      <li><a href="/customer">Customer Home</a></li>
+      <li><a href="/stock/show/<%=stock.id%>"><%=stock.name%></a></li>    
+    </ul>
+  </div>
 </nav>
+</div>
 <form action="/stock/update/<%= stock.id %>" method="POST" >
   <h2>Edit a Stock for Customer</h2>
   <table>
@@ -10,7 +17,7 @@
 	</tr>
 	<tr>
 		<td align='right'>
-			Stock Symbol
+			<strong>Stock Symbol</strong>
 		</td>
 		<td align='left'>
 			<input value="<%= stock.symbol %>" type="text" name="symbol" ><br />	
@@ -18,7 +25,7 @@
 	</tr>
 	<tr>
 	  <td align='right'>
-	  		number of shares
+	  		<strong>number of shares</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= stock.number_of_shares %>"type="text" name="number_of_shares" ><br />
@@ -26,7 +33,7 @@
 	</tr>
 	<tr>
 	  <td align='right'>
-	  		Name
+	  		<strong>Name</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= stock.name %>"type="text" name="name" ><br />
@@ -34,7 +41,7 @@
 	</tr>
 	<tr>
 	  <td align='right'>
-	  		Purchase Price
+	  		<strong>Purchase Price</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= stock.purchase_price %>"type="text" name="purchase_price" ><br />
@@ -42,7 +49,7 @@
 	</tr>
 	<tr>
 	  <td align='right'>
-	  		Date Purchased
+	  		<strong>Date Purchased</strong>
 	  	</td>
 	  	<td align='left'>
 		  <input value="<%= stock.date_purchased %>"type="text" name="date_purchased" ><br />
@@ -50,5 +57,5 @@
 	</tr>
   </table>
   <br/>
-  <input type="submit" value="Edit Stock" />
+  <input class="btn btn-primary btn-lg" type="submit" value="Update" />
 </form>
