--- a/views/stock/new.ejs
+++ b/views/stock/new.ejs
@@ -1,7 +1,14 @@
-<nav>
-  <a href="/">Home</a>
-  <a href="/customer">Customer</a>
+<div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class=" nav navbar-nav">
+      <li class="active"><a href="/">Node Financial</a></li>
+      <li><a href="/customer">Customer Home</a></li>
+      <li><a href="/customer/show/<%=customer.id%>"><%=customer.name%></a></li>
+    </ul>
+  </div>
 </nav>
+</div>
 <form action="/stock/create" method="POST" >
   <h2>Create a new Stock for <%= customer.name %></h2>
 
@@ -12,5 +19,5 @@
   <input type="text" placeholder="Number of Shares" name="number_of_shares" ><br />
   <input type="text" placeholder="Purchase Price" name="purchase_price" ><br />
   <input type="text" placeholder="Date purchased" name="date_purchased" ><br />
-  <input type="submit" value="Add Stock" />
+  <input class="btn btn-primary btn-lg" type="submit" value="Add Stock" />
 </form>
