--- a/views/stock/show.ejs
+++ b/views/stock/show.ejs
@@ -1,18 +1,25 @@
-<nav>
-  <a href="/">Home</a>
-  <a href="/customer/show/<%=stock.owner.id%>"><%=stock.owner.name%></a>
-  <a href="/customer">Customer</a>
+<div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class=" nav navbar-nav">
+      <li class="active"><a href="/">Node Financial</a></li>
+      <li><a href="/customer">Customer Home</a></li>
+      <li><a href="/customer/show/<%=stock.owner.id%>"><%=stock.owner.name%></a></li>
+    </ul>
+  </div>
 </nav>
-<br/>
+</div>
+<div>
 <h1><%= stock.owner.name %></h1>
 <hr>
 <h3>Symbol: <%=stock.symbol%></h3>
 <h3>Name: <%= stock.name %></h3><br/>
 <h3>Number Of Shares: <%= stock.number_of_shares %></h3><br/>
 <h3>Purchase Price: <%= stock.purchase_price%></h3><br/>
-<h3>Latest Price: <%= stock.current_price %></h3><br/>
+<h3>Latest Price: <%= stock.current_price%></h3><br/>
 <h3>Created: <%= stock.createdAt%></h3><br/>
 <h3>Modified: <%= stock.updatedAt%></h3><br/>
 <hr>
-<td><a href="/stock/edit/<%= stock.id %>">Edit</a></td>
-<td><a href="/stock/destroy/<%= stock.id %>">Delete</a></td>
+<td><a class="btn btn-warning btn-lg" href="/stock/edit/<%= stock.id %>">Edit</a></td>
+<td><a class="btn btn-danger btn-lg" href="/stock/destroy/<%= stock.id %>">Delete</a></td>
+</div>	
