--- a/views/customer/index.ejs
+++ b/views/customer/index.ejs
@@ -7,7 +7,10 @@
   </div>
 </nav>
 </div>
+<div class="container">
 <h1>Customers</h1>
+<br/>
+<br/>
 <table class="show">
   <tr>
     <th>ID</th>
@@ -25,5 +28,8 @@
     <td><a class="btn btn-info btn-lg" href="/customer/show/<%= customer.id %>">Show</a></td>
   </tr>
   <% }) %>
-</table><br/>
+</table>
+<br/>
+<br/>
   <a class="btn btn-primary btn-lg" href="/customer/new">Create New</a>
+  </div>
