--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,10 @@
-.show table,th,td {border : solid 1px green; border-collapse: collapse;}
-.show td,th{padding: 3px 7px 2px 7px;}
+.show table,.show th,.show td {border : solid 1px green; border-collapse: collapse;}
+.show td,.show th{padding: 3px 7px 2px 7px;}
 .show th{background-color: green; color:white; cursor: pointer; }
+
+.invfont{
+    font-size: 150%;
+}
 
 .navbar {
     margin-bottom: 0;
