--- a/views/customer/index.ejs
+++ b/views/customer/index.ejs
@@ -1,5 +1,5 @@
 <div>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <ul class=" nav navbar-nav">
       <li class="active"><a href="/">Node Financial</a></li>
@@ -7,6 +7,9 @@
   </div>
 </nav>
 </div>
+<br/>
+<br/>
+<br/>
 <div class="container">
 <h1>Customers</h1>
 <br/>
