--- a/views/customer/new.ejs
+++ b/views/customer/new.ejs
@@ -1,5 +1,5 @@
 <div>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <ul class=" nav navbar-nav">
       <li class="active"><a href="/">Node Financial</a></li>
@@ -8,6 +8,10 @@
   </div>
 </nav>
 </div>
+<br/>
+<br/>
+<br/>
+<div>
 <form action="/customer/create" method="POST" >
   <h2>Create a Customer</h2>
 
@@ -21,3 +25,4 @@
   <input type="text" placeholder="Cell Phone" name="cell_phone" ><br />
   <input type="submit" value="Create Customer" />
 </form>
+</div>
