--- a/views/stock/new.ejs
+++ b/views/stock/new.ejs
@@ -1,5 +1,5 @@
 <div>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <ul class=" nav navbar-nav">
       <li class="active"><a href="/">Node Financial</a></li>
@@ -9,6 +9,10 @@
   </div>
 </nav>
 </div>
+<br/>
+<br/>
+<br/>
+<div>
 <form action="/stock/create" method="POST" >
   <h2>Create a new Stock for <%= customer.name %></h2>
 
@@ -21,3 +25,4 @@
   <input type="text" placeholder="Date purchased" name="date_purchased" ><br />
   <input class="btn btn-primary btn-lg" type="submit" value="Add Stock" />
 </form>
+</div>
