--- a/views/customer/edit.ejs
+++ b/views/customer/edit.ejs
@@ -1,5 +1,5 @@
 <div>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <ul class=" nav navbar-nav">
       <li class="active"><a href="/">Node Financial</a></li>
@@ -9,6 +9,9 @@
   </div>
 </nav>
 </div>
+<br/>
+<br/>
+<br/>
 <div>
 <form class="form-signin" action="/customer/update/<%= customer.id %>" method="POST" >
   <h2>Create a Customer</h2>
