--- a/views/investment/edit.ejs
+++ b/views/investment/edit.ejs
@@ -1,5 +1,5 @@
 <div>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse  navbar-fixed-top">
   <div class="container-fluid">
     <ul class=" nav navbar-nav">
       <li class="active"><a href="/">Node Financial</a></li>
@@ -9,6 +9,10 @@
   </div>
 </nav>
 </div>
+<br/>
+<br/>
+<br/>
+<div>
 <form action="/investment/update/<%= investment.id %>" method="POST" >
   <h2>Edit a Investment for Customer</h2>
   <table>
@@ -59,3 +63,4 @@
   <br/>
   <input class="btn btn-primary btn-lg" type="submit" value="Update" />
 </form>
+</div>
