--- a/views/customer/new.ejs
+++ b/views/customer/new.ejs
@@ -23,6 +23,6 @@
   <input type="text" placeholder="Zip Code" name="zip" ><br />
   <input type="text" placeholder="Home Phone" name="home_phone" ><br />
   <input type="text" placeholder="Cell Phone" name="cell_phone" ><br />
-  <input type="submit" value="Create Customer" />
+  <input class="btn btn-primary btn-lg" type="submit" value="Create Customer" />
 </form>
 </div>
