--- a/views/customer/edit.ejs
+++ b/views/customer/edit.ejs
@@ -12,7 +12,7 @@
 <br/>
 <br/>
 <br/>
-<div>
+<div class="container">
 <form class="form-signin" action="/customer/update/<%= customer.id %>" method="POST" >
   <h2>Create a Customer</h2>
   <table>
