--- a/views/investment/edit.ejs
+++ b/views/investment/edit.ejs
@@ -12,7 +12,7 @@
 <br/>
 <br/>
 <br/>
-<div>
+<div class="container">
 <form action="/investment/update/<%= investment.id %>" method="POST" >
   <h2>Edit a Investment for Customer</h2>
   <table>
