--- a/views/investment/new.ejs
+++ b/views/investment/new.ejs
@@ -12,7 +12,7 @@
 <br/>
 <br/>
 <br/>
-<div>
+<div class="container">
 <form action="/investment/create" method="POST" >
   <h2>Create a new Investment for <%= customer.name %></h2>
 
