--- a/views/customer/new.ejs
+++ b/views/customer/new.ejs
@@ -11,7 +11,7 @@
 <br/>
 <br/>
 <br/>
-<div>
+<div class="container">
 <form action="/customer/create" method="POST" >
   <h2>Create a Customer</h2>
 
