--- a/views/stock/edit.ejs
+++ b/views/stock/edit.ejs
@@ -12,7 +12,7 @@
 <br/>
 <br/>
 <br/>
-<div>
+<div class="container">
 <form action="/stock/update/<%= stock.id %>" method="POST" >
   <h2>Edit a Stock for Customer</h2>
   <table>
