--- a/views/stock/new.ejs
+++ b/views/stock/new.ejs
@@ -13,7 +13,7 @@
 <br/>
 <br/>
 <br/>
-<div>
+<div class="container">
 <form action="/stock/create" method="POST" >
   <h2>Create a new Stock for <%= customer.name %></h2>
 
