--- a/views/investment/edit.ejs
+++ b/views/investment/edit.ejs
@@ -52,6 +52,14 @@
 		</td>
 	</tr>
 	<tr>
+	  <td align='right'>
+	  		<strong>Recent Price</strong>
+	  	</td>
+	  	<td align='left'>
+		  <input value="<%= investment.recent_value %>"type="text" name="acquired_value" ><br />
+		</td>
+	</tr>
+	<tr>
 		<td align='right'>
 			<strong>Recent Date</strong>
 		</td>
