--- a/views/investment/new.ejs
+++ b/views/investment/new.ejs
@@ -22,6 +22,7 @@
   <textarea type="text" placeholder="Description" name="description"></textarea><br />
   <input type="text" placeholder="Acquired Value" name="acquired_value"><br />
   <input type="text" placeholder="Acquired date" name="acquired_date"><br />
+  <input type="text" placeholder="Recent Value" name="recent_value"><br />
   <input type="text" placeholder="Recent date" name="recent_date"><br />
   <input class="btn btn-primary btn-lg" type="submit" value="Add Investment" />
 </form>
