--- a/views/investment/show.ejs
+++ b/views/investment/show.ejs
@@ -26,7 +26,7 @@
 	</tr>
 	<tr>
 		<td><strong>Acquired price: </strong></td>
-		<td><strong><%= investment.acquired_value %></strong></td>
+		<td><strong>$ <%= investment.acquired_value %></strong></td>
 	</tr>
 	<tr>
 		<td><strong>Acquired date: </strong></td>
@@ -35,6 +35,10 @@
 	<tr>
 		<td><strong>Description: </strong></td>
 		<td><strong><%=investment.description%></strong></td>
+	</tr>
+	<tr>
+		<td><strong>Recent price: </strong></td>
+		<td><strong>$ <%= investment.Recent_value %></strong></td>
 	</tr>
 	<tr>
 		<td><strong>Recent Date: </strong></td>
