--- a/views/customer/show.ejs
+++ b/views/customer/show.ejs
@@ -38,6 +38,14 @@
           <td><strong>Cell Phone: </strong></td>
           <td><strong><%= customer.cell_phone %></strong></td>
       </tr>
+      <tr>
+          <td><strong>Created At: </strong></td>
+          <td><strong><%= customer.createdAt %></strong></td>
+      </tr>
+      <tr>
+          <td><strong>Modified At: </strong></td>
+          <td><strong><%= customer.updatedAt %></strong></td>
+      </tr>
     </table>
     </div>
     <hr>
