--- a/views/customer/edit.ejs
+++ b/views/customer/edit.ejs
@@ -14,7 +14,7 @@
 <br/>
 <div class="container">
 <form class="form-signin" action="/customer/update/<%= customer.id %>" method="POST" >
-  <h2>Create a Customer</h2>
+  <h2>Edit a Customer <%=customer.name%></h2>
   <table>
   	<tr>
 	  	<td align='right'>
